--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "postinstall": "npm run build && skpm-link"
   },
   "devDependencies": {
-    "@skpm/builder": "^0.7.4"
+    "@skpm/builder": "^0.7.4",
+    "serialize-javascript": ">=2.1.1"
   },
   "author": "Ale M <ale@sketch.com>",
+  "license": "MIT",
   "repository": "https://github.com/BohemianCoding/sketch-ipsum.git",
   "dependencies": {}
 }
